--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 	"license": "MIT",
 	"packageManager": "yarn@3.6.3",
 	"scripts": {
-		"start": "cross-env NODE_ENV=production ts-node src/index.ts",
-		"dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only ./src/index.ts",
+		"start": "cross-env NODE_ENV=production ts-node ./src/app.ts",
+		"dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only ./src/app.ts",
 		"watch": "tsc --watch",
 		"build": "tsc -p ."
 	},
