--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
 		"cross-env": "^7.0.3",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.2.2"
+	},
+	"dependencies": {
+		"discord.js": "^14.13.0"
 	}
 }
