--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 	},
 	"dependencies": {
 		"axios": "^1.5.0",
-		"discord.js": "^14.13.0"
+		"discord.js": "^14.13.0",
+		"moment": "^2.29.4",
+		"winston": "^3.10.0",
+		"winston-daily-rotate-file": "^4.7.1"
 	}
 }
